made change for upload products and productProperties api added sample excel file in upload folder
